language/move-lang/tests/move_check/expansion/mdot_with_non_address_exp.move
address 0x1:

module X {
    bar() { }
}
module M {

    foo() {
        01::X::bar()
    }

    bar() {
        false::X::bar()
    }

    baz() {
        foo().bar().X::bar()
    }
}
